main/HAI705I - Compilation/02 - Analyse syntaxique/TP/ExprArith/ExprArith.g4
grammar ExprArith;
expr : additionExpr ;
additionExpr : multiplyExpr('+' multiplyExpr | '-' multiplyExpr)* ;
multiplyExpr : atomExpr ('*' atomExpr | '/' atomExpr)* ;
atomExpr : Number | '(' additionExpr  ')' | '-' atomExpr ;
Number : ('0'..'9')+ ;
WS : [ \t\r\n]+ -> skip ;
